- make it compatible with packager - Fx.Tween is enough (only one property) - animate -> set - immediate parameter for set (no fx) - instead of using ids in the optoins, use selectors to create the elements - toElement method - updated docs for the above changes - added demo page

--- a/package.yml
+++ b/package.yml
@@ -5,3 +5,6 @@ category:  Interface
 tags:  [progress,fx,forms,images]
 docs:  http://davidwalsh.name/js/progressbar
 demo:  http://davidwalsh.name/js/progressbar
+
+sources:
+  - "Source/ProgressBar.js"
